Cursor now fixed to the hand in both navigation bar and footer; logo should be now aligned to the right; link to help desk omitted; email command comes now without  subject line.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -165,7 +165,7 @@ h2 {
 
   border: 3px solid #ccc;
   border-radius: 0.5em;
-  cursor: default;  
+  cursor: pointer;  
 
   min-width: 7em;
   vertical-align: center;
@@ -285,6 +285,9 @@ h2 {
   visibility: hidden;
 }
 
+.header-link {
+    cursor: pointer;
+}
 
 .logoAlignLeft {
     align: left;
